# rust-router

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  plan-completed.md  plan.md  rust-microservices-migration-plan.md  scraper-spec.md
.claude/: settings.local.json
.claude/commands/: continue.md  handover.md  init.md  plan.md
.claude/skills/continue/: SKILL.md
.claude/skills/handover/: SKILL.md
.claude/skills/msi-install/: SKILL.md
.claude/skills/plan-executor/: SKILL.md
.claude/skills/updater-test/: SKILL.md
.claude/skills/wix-service-troubleshoot/: SKILL.md
.github/workflows/: release.yml
gateway/: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  gateway.exe.manifest  gateway.rc
gateway/proto/: gateway.proto
gateway/src/: config.rs  lib.rs  main.rs  router.rs  scraper.rs
gateway/src/grpc/: gateway_service.rs  mod.rs  pdf_service.rs  scraper_service.rs
gateway/src/job/: queue.rs  state.rs
gateway/src/p2p/: auth.rs  channel.rs  credentials.rs  grpc_handler.rs  mod.rs  peer.rs  signaling.rs
gateway/src/services/: mod.rs
gateway/src/updater/: downloader.rs  installer.rs  mod.rs  version.rs
gateway/tests/: integration_test.rs
gateway/wix/: Bundle.wxs.bak  License.rtf  feed.xml  main.wxs
router-service/: Cargo.toml  build.rs
router-service/proto/: scraper.proto
router-service/src/: config.rs  lib.rs  main.rs  scraper.rs
router-service/src/grpc/: handlers.rs  mod.rs
router-service/src/job/: mod.rs  state.rs
scripts/: agent_runner.py
shared-lib/: .gitlab-ci.yml  Cargo.toml
shared-lib/auth/: Cargo.toml
shared-lib/auth/src/: claims.rs  jwt.rs  lib.rs
shared-lib/db/: Cargo.toml
shared-lib/db/src/: config.rs  lib.rs  pool.rs
shared-lib/error/: Cargo.toml
shared-lib/error/src/: lib.rs
shared-lib/proto/: Cargo.toml  build.rs
shared-lib/proto/proto/: gateway.proto  pdf.proto  scraper.proto
shared-lib/proto/src/: lib.rs
timecard-service/: .gitlab-ci.yml  Cargo.toml
timecard-service/src/: lib.rs  models.rs  repository.rs  service.rs
