[package]
name = "gateway"
version = "0.2.16"
edition = "2021"
description = "API Gateway for gRPC requests"
authors = ["Honda Development Team"]
license = "MIT"

[features]
default = ["full"]
full = ["p2p", "updater", "scraper"]
minimal = ["scraper"]
p2p = []       # P2P/WebRTC functionality
updater = []   # Auto-update functionality
scraper = []   # Scraping functionality

[dependencies]
# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

# HTTP types for gRPC bridge
http = "1"
http-body-util = "0.1"
bytes = "1"

# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"

# Tower for InProcess service calls
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Crypto (SHA256 for update verification)
sha2 = "0.10"
hex = "0.4"

# Async trait
async-trait = "0.1"

# HTTP client for auto-update and OAuth
reqwest = { version = "0.12", features = ["json"] }

# UUID for job IDs
uuid = { version = "1", features = ["v4"] }

# Date/time for session folder naming
chrono = "0.4"

# P2P OAuth and WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
open = "5"
dirs = "5"

# WebRTC
webrtc = "0.12"

# Shared libraries (git dependencies for production)
# auth = { git = "https://gitlab.com/honda/shared-lib.git", tag = "v0.1.0" }
# db = { git = "https://gitlab.com/honda/shared-lib.git", tag = "v0.1.0" }
# error = { git = "https://gitlab.com/honda/shared-lib.git", tag = "v0.1.0" }

# For local development, use path dependencies
auth = { path = "../shared-lib/auth" }
db = { path = "../shared-lib/db" }
error = { path = "../shared-lib/error" }
proto = { path = "../shared-lib/proto", features = ["all", "reflection"] }

# Internal services (for InProcess calls)
# timecard-service = { git = "https://gitlab.com/honda/timecard-service.git", tag = "v0.1.0" }
timecard-service = { path = "../timecard-service" }

# Scraper service
scraper-service = { git = "https://github.com/yhonda-ohishi-pub-dev/rust-scraper.git", branch = "main" }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
tracing-layer-win-eventlog = "0.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-resource = "2"

[[bin]]
name = "gateway"
path = "src/main.rs"

[lib]
name = "gateway_lib"
path = "src/lib.rs"
