[package]
name = "router-service"
version = "0.1.0"
edition = "2021"
description = "ETC Scraper Router - gRPC Gateway and Job Management"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

# scraper-service = { git = "...", tag = "v0.1.0" }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "router-service"
path = "src/main.rs"

[lib]
name = "router_service"
path = "src/lib.rs"
