[workspace]
resolver = "2"
members = [
    "auth",
    "db",
    "error",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Honda Team"]
license = "MIT"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"

# JWT for auth (pure Rust implementation without C dependencies)
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
