[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Authentication and authorization library for microservices"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
jwt.workspace = true
hmac.workspace = true
sha2.workspace = true
chrono.workspace = true
tracing.workspace = true

# Internal dependencies
error = { path = "../error" }
